--- a/JavaScript(Tooling e ES6)/ES6 Modules/package.json
+++ b/JavaScript(Tooling e ES6)/ES6 Modules/package.json
@@ -19,8 +19,6 @@
   },
   "dependencies": {
     "core-js": "^3.19.1",
-    "css-loader": "^6.5.1",
-    "regenerator-runtime": "^0.13.9",
-    "style-loader": "^3.3.1"
+    "regenerator-runtime": "^0.13.9"
   }
 }
